[package]
name = "cif"
version = "0.1.0"
edition = "2024"
authors = ["Tobias <sandalbanditten@tutanota.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sandalbanditten/cif"
description = """
A character builder for the Cosmere TTRPG.
"""


[dependencies]
iced = "0.14"
rfd = "0.16"
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
